<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/interestedFragment"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/interested" />

    <item
        android:id="@+id/uploadFragment"
        android:enabled="true"
        android:icon="@drawable/ic_upload"
        android:title="@string/upload" />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />

    <item
        android:id="@+id/categoryFragment"
        android:enabled="true"
        android:icon="@drawable/ic_category"
        android:title="@string/category" />


</menu>