<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.auth.LoginFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_logo" />

    <TextView
        android:id="@+id/signUpTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userName_textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/phone_email"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTitleTv"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/userName_textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/userName_textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/userName_textInputLayout"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signUpBT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/phoneTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/phoneTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/phoneTextInputLayout" />

    <TextView
        android:id="@+id/doNotHaveAccountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:text="@string/don_t_have_an_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#D50000"
        app:layout_constraintEnd_toEndOf="@+id/signUpBT"
        app:layout_constraintStart_toStartOf="@+id/signUpBT"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordBT" />

    <TextView
        android:id="@+id/doNotHaveAccountBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@drawable/text_selector"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/doNotHaveAccountTV"
        app:layout_constraintStart_toEndOf="@+id/doNotHaveAccountTV"
        app:layout_constraintTop_toTopOf="@+id/doNotHaveAccountTV"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_with_social_media"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6200EA"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/signUpBT"
        app:layout_constraintStart_toStartOf="@+id/signUpBT"
        app:layout_constraintTop_toBottomOf="@+id/doNotHaveAccountTV" />

    <ImageView
        android:id="@+id/googleBT"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:clickable="true"
        android:contentDescription="@string/google"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/facebookBT"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:contentDescription="@string/facebook"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/googleBT"
        app:layout_constraintStart_toEndOf="@+id/googleBT"
        app:layout_constraintTop_toTopOf="@+id/googleBT"
        app:srcCompat="@drawable/facebook" />

    <TextView
        android:id="@+id/forgotPasswordBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@drawable/text_selector"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/signUpBT"
        app:layout_constraintStart_toStartOf="@+id/signUpBT"
        app:layout_constraintTop_toBottomOf="@+id/signUpBT" />


</androidx.constraintlayout.widget.ConstraintLayout>